# tasqs

./: CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PRODUCT.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  storage.rs
crates/tasqs/: Cargo.toml
crates/tasqs/src/: main.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
