[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LiamRall/tasqs"

[workspace.dependencies]
tasqs-core = { path = "crates/core" }
tasqs-cli  = { path = "crates/cli" }
tasqs-tui  = { path = "crates/tui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"